--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   build:
     name: Build Application
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
