--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
 
   test:
     name: Run Tests
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     needs: build
     steps:
       - name: Checkout code
@@ -71,7 +71,7 @@ jobs:
 
   lint:
     name: Lint Code
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     needs: build
     steps:
       - name: Checkout code
@@ -88,7 +88,7 @@ jobs:
 
   docker-build:
     name: Build Docker Image
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     needs: [test, lint]
     steps:
       - name: Checkout code
@@ -110,7 +110,7 @@ jobs:
 
   docker-push:
     name: Push Docker Image
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     needs: docker-build
     if: github.ref == 'refs/heads/main'
     steps:
@@ -149,7 +149,7 @@ jobs:
 
   deploy:
     name: Deploy to Cloud Foundry
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     needs: docker-push
     if: github.ref == 'refs/heads/main'
     steps:
