--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
   
   build:
     name: Build Application
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
 
   test:
     name: Run Tests
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     # ISSUE 5: Missing 'needs: build' - should run after build
     steps:
       - name: Checkout code
@@ -49,7 +49,7 @@ jobs:
 
   lint:
     name: Lint Code
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -65,7 +65,7 @@ jobs:
 
   docker-build:
     name: Build Docker Image
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     # ISSUE 7: Should depend on test and lint passing
     steps:
       - name: Checkout code
@@ -77,7 +77,7 @@ jobs:
 
   docker-push:
     name: Push Docker Image
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     # ISSUE 9: Missing proper job dependency - should need docker-build
     if: github.ref == 'refs/heads/main'
     steps:
@@ -95,7 +95,7 @@ jobs:
 
   deploy:
     name: Deploy to Cloud Foundry
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, solinas ]
     # ISSUE 12: Missing dependencies - should need docker-push
     if: github.ref == 'refs/heads/main'
     steps:
