--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ concurrency:
 
 env:
   GO_VERSION: '1.22'
-  DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY || 'myregistry.example.com' }}
+  DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY || 'myregistry.example.com' }}
   IMAGE_NAME: go-app-demo
 
 jobs:
