--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,140 +20,140 @@ env:
   IMAGE_NAME: go-app-demo
 
 jobs:
-  build:
-    name: Build Application
-    runs-on: [ self-hosted, solinas ]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # build:
+  #   name: Build Application
+  #   runs-on: [ self-hosted, solinas ]
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v4
+  #       with:
+  #         go-version: ${{ env.GO_VERSION }}
+  #         cache: true
 
-      - name: Build
-        run: make build
+  #     - name: Build
+  #       run: make build
 
-      - name: Upload binary artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: go-app-demo
-          path: go-app-demo
-          retention-days: 1
+  #     - name: Upload binary artifact
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: go-app-demo
+  #         path: go-app-demo
+  #         retention-days: 1
 
-  test:
-    name: Run Tests
-    runs-on: [ self-hosted, solinas ]
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # test:
+  #   name: Run Tests
+  #   runs-on: [ self-hosted, solinas ]
+  #   needs: build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v4
+  #       with:
+  #         go-version: ${{ env.GO_VERSION }}
+  #         cache: true
 
-      - name: Run tests
-        run: make test
+  #     - name: Run tests
+  #       run: make test
 
-      - name: Run tests with coverage
-        run: make coverage
+  #     - name: Run tests with coverage
+  #       run: make coverage
 
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: coverage.out
-          retention-days: 7
+  #     - name: Upload coverage report
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: coverage-report
+  #         path: coverage.out
+  #         retention-days: 7
 
-  lint:
-    name: Lint Code
-    runs-on: [ self-hosted, solinas ]
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # lint:
+  #   name: Lint Code
+  #   runs-on: [ self-hosted, solinas ]
+  #   needs: build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v4
+  #       with:
+  #         go-version: ${{ env.GO_VERSION }}
+  #         cache: true
 
-      - name: Run linter
-        run: make lint
+  #     - name: Run linter
+  #       run: make lint
 
-  docker-build:
-    name: Build Docker Image
-    runs-on: [ self-hosted, solinas ]
-    needs: [test, lint]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # docker-build:
+  #   name: Build Docker Image
+  #   runs-on: [ self-hosted, solinas ]
+  #   needs: [test, lint]
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub (for base images)
-        uses: docker/login-action@v2
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Log in to Docker Hub (for base images)
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ vars.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: false
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     - name: Build Docker image
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: .
+  #         push: false
+  #         tags: |
+  #           ${{ env.IMAGE_NAME }}:latest
+  #           ${{ env.IMAGE_NAME }}:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
 
-  docker-push:
-    name: Push Docker Image
-    runs-on: [ self-hosted, solinas ]
-    needs: docker-build
+  # docker-push:
+  #   name: Push Docker Image
+  #   runs-on: [ self-hosted, solinas ]
+  #   needs: docker-build
 
-    # if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   # if: github.ref == 'refs/heads/main'
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Registry
-        uses: docker/login-action@v2
-        with:
-          registry: cfs-automation.common.repositories.cloud.sap
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Log in to Docker Registry
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: cfs-automation.common.repositories.cloud.sap
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract version
-        id: version
-        run: |
-          RAW_VERSION=$(cat VERSION)
-          VERSION=$(echo $RAW_VERSION | sed 's/-SNAPSHOT//')
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "Normalized version: $VERSION"
+  #     - name: Extract version
+  #       id: version
+  #       run: |
+  #         RAW_VERSION=$(cat VERSION)
+  #         VERSION=$(echo $RAW_VERSION | sed 's/-SNAPSHOT//')
+  #         echo "version=$VERSION" >> $GITHUB_OUTPUT
+  #         echo "Normalized version: $VERSION"
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PATH }}${{ env.IMAGE_NAME }}:latest
-            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PATH }}${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
-            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PATH }}${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     - name: Build and push Docker image
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: .
+  #         push: true
+  #         tags: |
+  #           ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PATH }}${{ env.IMAGE_NAME }}:latest
+  #           ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PATH }}${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+  #           ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PATH }}${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}-${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
 
   deploy:
     name: Deploy to Cloud Foundry
@@ -164,12 +164,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install CF CLI
+      - name: Check CF CLI
         run: |
-          wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
-          echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
-          sudo apt-get update
-          sudo apt-get install cf8-cli
+          if ! command -v cf &> /dev/null; then
+            echo "CF CLI not found. Please install it on the runner."
+            echo "On macOS: brew install cloudfoundry/tap/cf-cli@8"
+            exit 1
+          fi
+          cf version
 
       - name: CF Login
         run: |
