--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,16 +164,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install CF CLI
+      - name: Install CF CLI v8
         run: |
-          if ! command -v cf &> /dev/null; then
-            echo "CF CLI not found. Installing..."
-            brew tap cloudfoundry/tap
-            brew install cloudfoundry/tap/cf-cli@8
-          else
-            echo "CF CLI already installed"
-          fi
+          CF_VERSION=8.16.0
+          echo "Installing CF CLI v${CF_VERSION}..."
+          curl -L "https://packages.cloudfoundry.org/stable?release=linux64-binary&version=${CF_VERSION}&source=github" -o cf.tgz
+          tar -xzf cf.tgz
+          sudo mv cf /usr/local/bin/
           cf version
+
 
       - name: CF Login
         run: |
