--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,14 +164,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install CF CLI v8
+      - name: Install CF CLI v8 (no sudo)
         run: |
+          set -euxo pipefail
           CF_VERSION=8.16.0
-          echo "Installing CF CLI v${CF_VERSION}..."
           curl -L "https://packages.cloudfoundry.org/stable?release=linux64-binary&version=${CF_VERSION}&source=github" -o cf.tgz
           tar -xzf cf.tgz
-          sudo mv cf /usr/local/bin/
+          mkdir -p "$HOME/.local/bin"
+          mv cf "$HOME/.local/bin/cf"
+          chmod +x "$HOME/.local/bin/cf"
+          echo "$HOME/.local/bin" >> "$GITHUB_PATH"
           cf version
+
 
 
       - name: CF Login
