--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ env:
 jobs:
   build:
     name: Build Application
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ubuntu-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -45,7 +45,7 @@ jobs:
 
   test:
     name: Run Tests
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ubuntu-latest]
     needs: build
     steps:
       - name: Checkout code
@@ -72,7 +72,7 @@ jobs:
 
   lint:
     name: Lint Code
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ubuntu-latest]
     needs: build
     steps:
       - name: Checkout code
@@ -89,7 +89,7 @@ jobs:
 
   docker-build:
     name: Build Docker Image
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ubuntu-latest]
     needs: [test, lint]
     steps:
       - name: Checkout code
@@ -117,7 +117,7 @@ jobs:
 
   docker-push:
     name: Push Docker Image
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ubuntu-latest]
     needs: docker-build
 
     # if: github.ref == 'refs/heads/main'
@@ -157,7 +157,7 @@ jobs:
 
   deploy:
     name: Deploy to Cloud Foundry
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ubuntu-latest]
     needs: docker-push
 
     steps:
