--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build Application
-    runs-on: [ self-hosted, solinas ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
 
   test:
     name: Run Tests
-    runs-on: [ self-hosted, solinas ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,7 +41,7 @@ jobs:
 
   lint:
     name: Lint Code
-    runs-on: [ self-hosted, solinas ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -56,7 +56,7 @@ jobs:
 
   docker-build:
     name: Build Docker Image
-    runs-on: [ self-hosted, solinas ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -66,7 +66,7 @@ jobs:
 
   docker-push:
     name: Push Docker Image
-    runs-on: [ self-hosted, solinas ]
+    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
