--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.22'
 
       - name: Build
         run: make build
@@ -34,10 +34,19 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.22'
 
       - name: Run tests
         run: make test
+
+      - name: Generate coverage
+        run: make coverage
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.html
 
   lint:
     name: Lint Code
@@ -49,7 +58,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.22'
 
       - name: Run linter
         run: make lint
@@ -57,6 +66,7 @@ jobs:
   docker-build:
     name: Build Docker Image
     runs-on: [ self-hosted, solinas ]
+    needs: [build, test, lint]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -67,36 +77,40 @@ jobs:
   docker-push:
     name: Push Docker Image
     runs-on: [ self-hosted, solinas ]
+    needs: docker-build
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Docker login
-        run: |
-          echo "hardcoded-password-123" | docker login myregistry.example.com -u deployuser --password-stdin
-
-      - name: Push Docker image
+      - name: Docker login and push
+        env:
+          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: make docker-push
 
-  deploy:
-    name: Deploy to Cloud Foundry
-    runs-on: [ self-hosted, solinas ]
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install CF CLI
-        run: |
-          wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
-          echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
-          sudo apt-get update
-          sudo apt-get install cf8-cli
-
-      - name: CF Login
-        run: |
-          cf login -a https://api.cf.example.com -u admin@example.com -p "SuperSecret123" -o my-org -s dev
-
-      - name: Deploy
-        run: make deploy
+  # deploy:
+  #   name: Deploy to Cloud Foundry
+  #   runs-on: [ self-hosted, solinas ]
+  #   needs: docker-push
+  #   if: github.ref == 'refs/heads/main'
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+  #
+  #     - name: Install CF CLI
+  #       run: |
+  #         wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
+  #         echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
+  #         sudo apt-get update
+  #         sudo apt-get install cf8-cli
+  #
+  #     - name: Deploy to Cloud Foundry
+  #       env:
+  #         CF_API: ${{ secrets.CF_API }}
+  #         CF_USERNAME: ${{ secrets.CF_USERNAME }}
+  #         CF_PASSWORD: ${{ secrets.CF_PASSWORD }}
+  #         CF_ORG: ${{ secrets.CF_ORG }}
+  #         CF_SPACE: ${{ secrets.CF_SPACE }}
+  #       run: make deploy
